--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Rifki Ardiansyah",
   "license": "ISC",
   "dependencies": {
+    "get-video-duration": "^4.1.0",
     "mime": "^3.0.0",
     "node-fetch": "^2.6.7",
     "puppeteer": "^19.3.0"
